--- a/src/App.css
+++ b/src/App.css
@@ -22,14 +22,99 @@ body {
     justify-content: center;
     min-height: 100vh;
     background-color: hsl(225, 100%, 94%);
+    font-family: "Red Hat Display", sans-serif;
 }
 
 
 .card-container {
     background-color: white;
     max-width: 350px;
+    border-radius: 20px;
 }
 
+
+
+/* img start */
 .img-hero {
     width: 100%;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
+
+/* img end */
+
+
+
+/* content start */
+.content-container {
+    text-align: center;
+    padding: 20px;
+}
+
+.content-container h2 {
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+
+.anual-plan-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: hsl(225, 100%, 98%);
+    border-radius: 10px;
+    padding: 15px;
+    margin-top: 20px;
+
+}
+
+.cost-anual-plan {
+    display: flex;
+    gap: 20px;
+}
+
+.annual-plan {
+    font-weight: 700;
+}
+
+.cost {
+    opacity: 0.7;
+    font-weight: 500;
+    margin-top: 2px;
+}
+
+.anual-plan-link {
+    font-weight: 700;
+}
+
+.anual-plan-link:hover {
+    text-decoration: none;
+    transition: color 0.2s, text-decoration 2s;
+    font-weight: 700;
+    color: hsl(224, 23%, 55%);
+}
+
+.btn-container {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-payment {
+    border: none;
+    background-color: hsl(245, 75%, 52%);
+    font-weight: 600;
+    border-radius: 10px;
+    color: white;
+    padding: 12px;
+    margin-bottom: 20px;
+
+}
+
+.btn-cancel-order {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    font-weight: 700;
+    opacity: 0.6;
+}
+
+/* content end */
